# MLFromScratch

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
observations/: 14feb.md  16feb.md  MLPPlateau.md  training_runs.txt
src/: conv2d.cpp  conv2d.h  debug.h  layer.cpp  layer.h  main.cpp  matrix.h  mnist.h  readme.md  relu.cpp  relu.h  run_logger.h  tensor.h  test_openmp.cpp  timer.h  training_config.h  training_run_logging.h  util.h
